2014-08-05  Justin Lippi  <jlippi@gmail.com>

  *   khmer/__init__.py: import get_version_cpp method as __version_cpp__.
  *   khmer/_khmermodule.cc: write get_version_cpp method in C++
  *   tests/test_version.py: check that version from C++ matches version from
      versioneer
  *   setup.cfg: don't run jenkins attr with 'make test'

2014-08-04  Michael R. Crusoe  <mcrusoe@msu.edu>

    * khmer/_khmermodule.cc,lib/{kmer_hash.{cc,hh},read_aligner.cc,
    read_parsers.{cc,hh},trace_logger.cc: Replace remaining uses of assert()
    with khmer_exceptions. Fixes #215.
    * setup.py: simplify argparse conditional dependency

2014-08-03  Titus Brown & Michael R. Crusoe  <t@idyll.org>

    * doc/{artifact-removal,partitioning-workflow{.graffle,.png}},{biblio,
    blog-posts,guide,install,choosing-table-sizes,known-issues,scripts,
    partitioning-big-data.txt: moved to doc/user/
    * doc/{crazy-ideas,details,development,galaxy,release,examples}.txt: moved
    to doc/dev/
    * doc/dev/{a-quick-guide-to-testing,codebase-guide,
    coding-guidelines-and-review,for-khmer-developers,getting-started,
    hackathon,index}.txt,doc/user/index.txt: new content.
    * doc/design.txt: deleted
    The documentation has been split into user focused documentation and
    developer focused documentation. The new developer docs were field tested
    as part of the Mozilla Science Lab global sprint that we participated in;
    we are grateful to all the volunteers.

2014-07-24  Ivan Gonzalez  <iglpdc@gmail.com>

    * lib/khmer.hh, lib/khmer_exception.hh: All exceptions are now derived from
	a new base class exception, khmer::khmer_exception. Issue #508.
    * lib/counting.cc, lib/hashbits.cc, lib/hashtable.{cc,hh},lib/kmer_hash.cc,
	lib/labelhash.cc, lib/perf_metrics.hh, lib/read_parsers.{cc,hh},
	lib/subset.cc, lib/thread_id_map.hh: All exceptions thrown are now
	instances (or derived from) khmer::khmer_exception.

2014-07-24  Jiarong Guo  <guojiaro@gmail.com>
